# codebay-final-project

./: .dockerignore  .gitignore  Dockerfile  Makefile  NOTES.md  README.md  cli_typer.py  docker-compose.yml  index.html  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
Contact/: contact.css  contact.html  contact.js
MyOrders/: orders.css  orders.html  orders.js
Wishlist/: wish.css  wish.html  wish.js
about/: about.css  about.html  about.js
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
analytics/: index.html  script.js  styles.css
backend/: Dockerfile  manage.py  product-django.json  pyproject.toml  pytest.ini
backend/accounts/: admin.py  auth_backend.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_remove_user_location_user_country.py  0004_user_stripe_customer_id.py
backend/chat/: admin.py  models.py  serializers.py  views.py
backend/chat/migrations/: 0001_initial.py
backend/codebay/: asgi.py  settings.py  urls.py  wsgi.py
backend/marketplace/: admin.py  models.py  serializers.py  urls.py  views.py
backend/marketplace/migrations/: 0001_initial.py  0002_product_pending_publication_product_published.py  0003_alter_media_options_media_content_type_and_more.py  0004_remove_media_image_data_media_image.py  0005_alter_media_options_remove_media_content_type_and_more.py
backend/payments/: admin.py  models.py  serializers.py  urls.py  views.py
backend/payments/migrations/: 0001_initial.py  0002_alter_payment_product_delete_product.py
backend/storage/: admin.py  models.py  serializers.py  urls.py  views.py
backend/storage/migrations/: 0001_initial.py
cart/: cart.css  cart.html  cart.js
chat/: chat.js  index.html  serializers.py  style.css  urls.py
codebay/: settings.py  urls.py
components/: avat_menu.html  card.html  footer.html  hamb_menu.html  header.html  header_logged_in.html  header_logged_out.html
homepage/: home.js  index.html  script.js  styles.css
marketplace/: admin.py  models.py  serializers.py  urls.py  views.py
my_products/: index.html  product-actions.js  product-management.js  product-render.js  (+2 more)
(+138 files in other folders)
